[package]
name = "xpic-tauri"
version = "0.3.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[lib]
name = "xpic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "Xpic"
path = "src/main.rs"

[dependencies]
xpic = "0.2"
tauri = { version = "2.10", features = ["protocol-asset", "config-toml"] }
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.6"
tauri-plugin-clipboard-manager = "2.3"
window-vibrancy = "0.7"
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
glob = "0.3"
showfile = "0.1"
image = "0.25"
serde_json = { version = "1.0" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]

[features]
custom-protocol = ["tauri/custom-protocol"]
