[package]
name = "xpic-app"
version = "0.4.0"
edition = "2024"

[dependencies]
xpic = { path = "../xpic" }
gpui = { git = "https://github.com/zed-industries/zed", features = ["windows-manifest"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = "8.11"
anyhow = "1.0"
