[package]
name = "xpic-app"
version = "0.4.0"
edition = "2024"

[dependencies]
xpic = { path = "../xpic" }
gpui = { git = "https://github.com/zed-industries/zed", features = ["windows-manifest"] }
rust-embed = "8.11"
raw-window-handle = "0.6"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_Controls"] }
anyhow = "1.0"
