[package]
name = "xpic-app"
version = "0.4.0"
edition = "2024"

[dependencies]
xpic = { path = "../xpic" }
gpui = { git = "https://github.com/zed-industries/zed", features = ["windows-manifest"] }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = "8.11"
raw-window-handle = "0.6"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_Controls"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.2", features = ["derive"] }
smallvec = "1.15"
dirs = "6.0"
sha2 = "0.10"
hex = "0.4"
reqwest = "0.13"
tokio = { version = "1.49", features = ["full"] }
image = "0.25"
chrono = "0.4"
photon-rs = "0.3"
ahash = "0.8"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Xpic"
ProductName = "Xpic"
LegalCopyright = "Copyright © 2026 fhluo"
