[package]
name = "xpic"
version = "0.3.0"
edition = "2024"
description = "Save wallpapers from Windows Spotlight and Bing"
categories = ["command-line-utilities"]
repository = "https://github.com/fhluo/xpic"
license = "MIT"
exclude = ["Taskfile.yaml"]

[dependencies]
futures = "0.3"
regex = "1.12"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde_with = "3.16"
strum = { version = "0.27", features = ["derive"] }
anyhow = "1.0"
comfy-table = "7.2"
const_format = { version = "0.2", features = ["fmt"] }

[dev-dependencies]
serde_urlencoded = "0.7"
